--- a/CAFE MENU/Back.css
+++ b/CAFE MENU/Back.css
@@ -1,5 +1,5 @@
 .container1 {
-  height: 620px;
+  height: 550px;
   width: 300px;
   background-color: white;
   border-radius: 25px;
@@ -24,18 +24,33 @@ hr {
   border: 2px solid rgb(200, 152, 19);
   width: 100%;
 }
-.rightli {
-  text-align: justify;
+.flavor {
+  text-align: left;
+  width: 60%;
   list-style: none;
+  margin: 0;
+}
+.price {
+  text-align: center;
 }
 
-.list {
-  display: flex;
-  flex-direction: row;
-}
 .link {
   color: black;
 }
 .link:hover {
   color: rgb(200, 152, 19);
+}
+img,
+h2 {
+  text-align: center;
+}
+
+.div_2 {
+  flex-direction: row;
+}
+.list {
+  border-collapse: collapse;
+  margin: 20px 20px;
+  text-align: left;
+  width: 100%;
 }
