--- a/Proinsure/style.css
+++ b/Proinsure/style.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+}
+
 a {
   text-decoration: none;
 }
@@ -5,12 +9,15 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
 }
 .header {
-  max-width: 1200px;
-  padding: 0 32px;
+  /*max-width: 1200px;*/
+  width: 100%;
+  padding: 20px 32px;
   margin: 0;
+  position: fixed;
+  top: 0px;
+  background-color: white;
 }
 .proinsure {
   font-size: 36px;
@@ -26,7 +33,6 @@ a {
   color: #6f6c75;
 }
 .link {
-  display: flex;
   align-items: center;
   font-weight: 700;
   margin-left: 350px;
@@ -34,7 +40,7 @@ a {
 .btn {
   color: #6f6c75;
   padding: 12px 18px;
-  border: 2px solid #6f6c75;
+  border: 1px solid #6f6c75;
   border-radius: 3px;
 }
 .btn:hover {
@@ -45,44 +51,166 @@ a:hover:not(.btn) {
   color: #2d2640;
 }
 .mid1 {
-  background-color: #2d2640;
-  padding: 60px 0;
-  color: white;
-  margin-top: 88px;
-}
-.container {
-  width: 1200px;
-  padding: 0 32px;
-  margin: auto;
-}
-.align_item {
-  align-items: flex-start;
-}
-.flex1 {
   display: flex;
   justify-content: space-between;
+  background-color: #2d2640;
+  height: 450px;
+  width: 100%;
+  margin-top: 100px;
+  /*padding: 0px 60px;*/
 }
+.container {
+  width: 45%;
+  margin: 70px 32px;
+}
+
 .hr {
-  width: 200px;
-  height: 2px;
+  width: 230px;
+  height: 3px;
   background-color: #6f6c75;
 }
 .heading {
   font-size: 56px;
   margin-top: 16px;
   line-height: 1.1;
+  color: white;
 }
 .headingtext {
   color: #bcb8c4;
   margin: 32px 0;
-  font-size: 18px;
+  font-size: 24px;
 }
 .btnsecond {
+  background-color: #2d2640;
+  color: white;
+  padding: 12px 18px;
+  border: 1px solid white;
+  border-radius: 3px;
+}
+.btnsecond:hover {
   background-color: white;
   color: #2d2640;
-  border: 1px solid white;
-  padding: 12px 18px;
-  display: inline-block;
-  font-size: 20px;
+}
+img {
+  width: 80%;
+  height: 500px;
+  padding: 50px;
+}
+.imgsize {
+  width: 45%;
+}
+.mid2 {
+  display: flex;
+  justify-content: space-between;
+  margin: 80px 0px 0px;
+  padding: 80px 0;
+}
+.container2 {
+  padding: 0 32px;
+  width: 40%;
+  margin: 0 auto;
+  margin-right: 40px;
+}
+.image2 {
+  width: 90%;
+}
+.heading2 {
+  font-size: 56px;
+  margin-top: 150px;
+  line-height: 1.1;
+  color: #2d2640;
+}
+.link2 {
+  align-items: center;
   font-weight: 700;
+  margin-right: 0;
+}
+.mid3 {
+  margin-left: 28px;
+  padding: 80px 0;
+}
+.mid3head {
+  font-size: 48px;
+  color: #2d2640;
+}
+.flex2 {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 32px;
+  width: 100%;
+}
+.alignstart {
+  align-items: flex-start;
+}
+.icon {
+  width: 48px;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  background-color: rgb(164, 164, 202);
+  justify-content: center;
+  color: white;
+  border-radius: 50%;
+}
+.padding {
+  padding-left: 32px;
+}
+.hr2 {
+  width: 210px;
+  height: 2px;
+  background-color: #aaa8ad;
+}
+.h2 {
+  color: #2d2640;
+  font-size: 35px;
+  margin-left: 24px;
+}
+.box {
+  width: 370px;
+  height: 200px;
+}
+.icontext {
+  color: #8874b1;
+  margin: 32px 0;
+  font-size: 20px;
+}
+.mid4 {
+  width: 100%;
+  padding: 80px 0;
+  background-color: #2d2640;
+  height: 200px;
+}
+h3 {
+  font-size: 44px;
+  color: white;
+}
+.box2 {
+  width: 380px;
+  height: 150px;
+  margin-left: 60px;
+  margin-top: 40px;
+}
+.margin {
+  margin-top: 60px;
+}
+.social {
+  border-bottom: 1px solid #6e6b74;
+}
+.icon2 > i {
+  width: 48px;
+  color: rgb(164, 164, 202);
+}
+.icon2 > i:hover {
+  color: #2d2640;
+}
+.footer {
+  text-align: center;
+  padding: 24px 0;
+}
+.copywrite {
+  text-align: center;
+  background-color: #2d2640;
+  color: #cbc9c9;
+  font-size: 20px;
+  padding: 32px 0;
 }
